2009-07-04  David Sedeño <david@alderia.com>

	* data/gwget.ui: Set remove download callback.
	* src/main_window.c: 
		- Fix drag'n'drop freeze. Thansk to Artur Rona <ari-tczew@tlen.pl> 
		for the bugreport.
		- Don't add download from gconf if url is null.

2009-06-30  David Sedeño <david@alderia.com>

  * data/gwget.ui: Set button size to menu. Fixes #527818

2009-06-27  David Sedeño <david@alderia.com>

  * gwget.doap: new file
  * data/gwget.ui: Set resume icon in popup menu
  * po/POTFILES.in: Remove .glade file and add .ui files

2009-06-20  David Sedeño <david@alderia.com>

  * src/new_window.c: Use gtk_combo_box_get_active_text instead 
    of gtk_entry_get_text
  * data/gwget.ui: Redone the menuitems. Remove unused dialog3. 
    Redone the popup menu.
  * src/main_window.c: Load correct file
  * data/preferences.ui: Update with glade-3
  
2009-06-20  David Sedeño <david@alderia.com>

  * configure.ac, data/Makefile.am, data/gwget.ui, data/preferences.ui,
    src/gwget_data.c, src/main_window.c, src/main_window.h, src/main_window_cb.c,
    src/new_window.c, src/systray.c, src/utils.c
  Mass changes to migrate to gtkbuilder. Thanks to Artur Roma <ari-tczew@tlen.pl>

2009-06-18  David Sedeño <david@alderia.com>

  * configure.ac, NEWS: Version 1.0.2 

  * src/main.c, src/gnome-application.c: Remove old dbus code. 

  * src/main_window_cb.c (on_md5ok_button_clicked): 
  Make the markup work again. Remove from the traduction str.
        
2009-06-17  David Sedeño <david@alderia.com>

	* src/main_window_cb.c: Remove gnome_vfs and use gio 
	in md5sum comprobation.

2009-06-16  David Sedeño <david@alderia.com>

	* src/main_window_cb.c: Remove gnome-vfs from two functions.

2009-06-15  David Sedeño <david@alderia.com>

	* src/utils.{c,h}: Clean up run_dialog_information and run_dialog_error. Thanks to 
	Jaroslav Imrich <jaroslav.imrich@gmail.com> for the patch.

2009-06-01  David Sedeño <david@alderia.com>
