@@ -1,5 +1,6 @@
 2009-07-04  David Sedeño <david@alderia.com>
 
+	* data/gwget.ui, src/main_window.c: Set the rows and columns reorderable.
 	* data/gwget.ui: Set remove download callback.
 	* src/main_window.c: 
 		- Fix drag'n'drop freeze. Thansk to Artur Rona <ari-tczew@tlen.pl> 
